src/test/ui/issue-38715.stderr
error: a macro named `foo` has already been exported
  --> $DIR/issue-38715.rs:15:1
   |
LL | macro_rules! foo { () => {} } //~ ERROR a macro named `foo` has already been exported
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `foo` already exported
   |
note: previous macro export here
  --> $DIR/issue-38715.rs:12:1
   |
LL | macro_rules! foo { ($i:ident) => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `issue_38715`
   |
   = note: consider adding a `main` function to `$DIR/issue-38715.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
